// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`writeBrowserEntry > snapshot 1`] = `
"// auto-generated by Solas

import { browser } from '@jk2908/solas/env/browser'

browser()
"
`;

exports[`writeRSCEntry > snapshot: bun runtime with trailing slash 1`] = `
"// auto-generated by Solas

import { createHandler, createRuntime, loadManifest, Runtime } from '@jk2908/solas/env/rsc'

import { manifest } from './manifest.js'
import { importMap } from './maps.js'
import { config } from './config.js'

Runtime.runtime = createRuntime('bun')
const runtimeManifest = await loadManifest('dist')

export default createHandler(config, manifest, importMap, runtimeManifest)

if (import.meta.hot) {
	import.meta.hot.accept()
}
"
`;

exports[`writeRSCEntry > snapshot: node runtime 1`] = `
"// auto-generated by Solas

import { createHandler, createRuntime, loadManifest, Runtime } from '@jk2908/solas/env/rsc'

import { manifest } from './manifest.js'
import { importMap } from './maps.js'
import { config } from './config.js'

Runtime.runtime = createRuntime('node')
const runtimeManifest = await loadManifest('dist')

export default createHandler(config, manifest, importMap, runtimeManifest)

if (import.meta.hot) {
	import.meta.hot.accept()
}
"
`;

exports[`writeSSREntry > snapshot 1`] = `
"// auto-generated by Solas

export { prerender, resume, ssr } from '@jk2908/solas/env/ssr'
"
`;
